# rapidSTORM

./: .exrc  .gitignore  AUTHORS  Car.cpp  Car.h  ChangeLog  CommandLine.cpp  CommandLine.h  DStorm.java  DataSetTraits.cpp  DataSetTraits.h  DefaultPath.java.in  DeferredError.cpp  DeferredError_Impl.h  Doxyfile  Doxyfile.in  GUIThread.cpp  GUIThread.h  Garage.cpp  Garage.h  GarageConfig.cpp  GarageConfig.h  InputStream.cpp  InputStream.h  InsertionPlace.h  Job.h  JobMaster.h  JobStarter.cpp  JobStarter.h  LICENSE  LengthUnit.h  LibraryHandle.cpp  LibraryHandle.h  Localization.cpp  Localization.h  MainThread.cpp  MainThread.h  Makefile.am  MasterConfig.cpp  MasterConfig.h  (+49 more)
3d_fitter/: Config.cpp  Config.h  Config_decl.h  ConstantTypes.h  Exponential3D.hh  Exponential3D_Accessor.h  Exponential3D_Derivatives.h  Exponential3D_ParameterHelper.hh  Exponential3D_impl.hh  Factory.cpp  Factory.h  Fitter.cpp  Fitter.h  Makefile.am  Specialized.cpp  Specialized_naive.cpp  Unspecialized.cpp  check_derivatives.cpp  configure.ac  plugin.cpp
AndorCamera/: Acquisition.cpp  Acquisition.h  AcquisitionMode.cpp  AcquisitionMode.h  AcquisitionSwitch.cpp  AndorDirect.cpp  AndorDirect.h  AndorDirect_decl.h  AndorDirect_iterator.cpp  Camera.cpp  Camera.h  CameraConnection.cpp  CameraConnection.h  Config.cpp  Config.h  Context.h  EmergencyHandler.cpp  EmergencyHandler.h  Error.cpp  Gain.h  Initialization.cpp  Initialization.h  InputChainLink.cpp  InputChainLink.h  InputChainLink_decl.h  LiveView.cpp  LiveView.h  LiveView_decl.h  Makefile.am  Readout.cpp  Readout.h  SDK.cpp  SDK.h  ShiftSpeedControl.cpp  ShiftSpeedControl.h  ShutterControl.cpp  ShutterControl.h  StateMachine.cpp  StateMachine.h  StateMachine_impl.h  (+11 more)
CImgBuffer/: AndorDirect.cpp  AndorDirect.h  AndorSIF.cpp  AndorSIF.h  AutoInputMethod.h  BasenameWatcher.h  Buffer.h  CImgList.cpp  Config.cpp  ImageTraits.h  Makefile.am  SerialImageSource.h  Slot_impl.h  Source.h  TIFF.cpp  TIFF.h
DummyCamera/: ATMCD32D.H  Makefile.am  dummycamera.cpp  dummycamera.h
cc++/: Makefile.am  thread.cpp
dStorm/: BaseImage.h  BaseImage_decl.h  BasicOutputs.cpp  BasicOutputs.h  Candidate.h  CandidateTree.h  CarConfig.cpp  CarConfig.h  Config.cpp  Config.h  Config_decl.h  Crankshaft.cpp  Crankshaft.h  DataSetTraits.cpp  DataSetTraits.h  DeferredError.cpp  DeferredError.h  Direction.h  Engine.h  Engine_decl.h  FileOutputBuilder.h  FilterBuilder.h  FilterSource.cpp  FilterSource.h  GUIThread.cpp  GUIThread.h  Image.h  ImageTraits.cpp  ImageTraits.h  ImageTraits_decl.h  ImageTraits_impl.h  Image_decl.h  Image_impl.h  Image_iterator.h  InsertionPlace.h  Job.h  JobMaster.cpp  JobMaster.h  LengthUnit.h  Localization.cpp  (+42 more)
deploy/: Makefile.am  build_installer.mk.in  configure.ac  dSTORM.iss.in  dSTORM_tail.iss  inst.cdr
doc/: Makefile.am  bib4wbbt.bib  bibliography.xml  configure.ac  engine_options.xml  errors.xml  foprc.in  fundamentals.pxml  fundamentals.xml  input-options.xml  make_titlepage.xsl  output-options.xml  polynomial_3d_holtzer_conversion.tex  polynomial_3d_parabolic_conversion.tex  polynomial_3d_psf.tex  rapidstorm.pxml  rapidstorm.xml  rapidstorm_fo.xsl  rapidstorm_guilabels.xsl  rapidstorm_html.xsl  rapidstorm_htmlhelp.xsl  rapidstorm_pre.xsl  reference-manual.pxml  spline-theory.tex  tex2im  titlepage.xml  ui.pxml  ui.xml  usage-examples.pxml  usage-examples.xml  version.ent.in  xml2db5.xsl
engine/: BaseTransmissionConfigs.cpp  Candidate.h  CandidateTree.cpp  CandidateTree.h  Car.cpp  Car.h  CarConfig.cpp  CarConfig.h  CarConfig_decl.h  Car_decl.h  ChainLink.cpp  ChainLink.h  ChainLink_decl.h  Config.cpp  Config.h  Config_decl.h  Engine.cpp  Engine.h  EngineThread.cpp  EngineThread.h  FitJudger.cpp  FitJudger.h  FitJudgerFactory.h  FitPositionDeduplicater.h  FitPositionGenerator.cpp  FitPositionGenerator.h  FitPositionRoundRobin.h  GaussFitter.cpp  GaussFitter.h  GaussFitterFactory.h  GaussFitter_ResidueAnalysis.h  GaussFitter_Specialized.h  GaussFitter_Specialized_a.cpp  GaussFitter_Specialized_b.cpp  GaussFitter_Specialized_c.cpp  GaussFitter_Width_Invariants.cpp  GaussFitter_Width_Invariants.h  GaussFitter_decl.h  GaussFitter_impl.h  GaussFitter_selector.cpp  (+40 more)
fit++/: BitfieldConstructor.hh  Exponential2D.hh  Exponential2D_Correlated_Derivatives.hh  Exponential2D_ParameterHelper.hh  Exponential2D_Uncorrelated_Derivatives.hh  Exponential2D_impl.hh  Exponential_Common.h  Exponential_Common_ParameterHelper.hh  Exponential_Uncorrelated_Derivatives.h  FitFunction.hh  FitFunction_impl.hh  Helpers.hh  LatticeFitFunction.hh  LeastSquaresLatticeFitter.hh  Makefile.am  ParameterAllocator.hh  alignment_test.cpp
gauss_fitter/: Config.cpp  Factory.cpp  Factory.h  GaussFitter.cpp  GaussFitter.h  GaussFitterConfig.cpp  GaussFitterConfig.h  GaussFitter_ResidueAnalysis.h  GaussFitter_Specialized.h  GaussFitter_Specialized_b.cpp  GaussFitter_Width_Invariants.cpp  GaussFitter_Width_Invariants.h  GaussFitter_impl.h  Makefile.am  NoAnalysis_fitters_0.cpp  NoAnalysis_fitters_correlated.cpp  NoAnalysis_impl.h  PSF.yacas  ResidueAnalysis.cpp  ResidueAnalysis.h  ResidueAnalysis_fitter.h  ResidueAnalysis_fitters_uncorrelated_0.cpp  ResidueAnalysis_fitters_uncorrelated_1.cpp  ResidueAnalysis_impl.h  check_uncorrelated.cpp  config.h.in  configure.ac
java_gui/: ConfigEntry.java  ConfigEntryButton.java  ConfigEntryCheckbox.java  ConfigEntryChooser.java  ConfigEntryDouble.java  ConfigEntryFloat.java  ConfigEntryProgress.java  ConfigEntryUnsignedLong.java  ConfigMessage.java  ConfigSet.java  ConfigSetListener.java  DefaultPath.java.in  Makefile.am  MessageDialogMaker.java  NumberFieldListener.java
locprec/: Counter.h  DensityProfile.h  DistanceHistogram.cpp  DistanceHistogram.h  DriftEstimator.cpp  EmissionTracker.cpp  EmissionTracker.h  EmissionTracker_decl.h  FileShockAbsorber.h  FillholeSmoother.cpp  FillholeSmoother.h  Fluorophore.cpp  Fluorophore.h  FluorophoreDistribution.h  FluorophoreDistributions.h  FluorophoreDistributions_Lattice.cpp  FluorophoreDistributions_Lines.cpp  FluorophoreDistributions_Random.cpp  KalmanTrace.h  Makefile.am  NoiseGenerator.cpp  (+38 more)
(+2926 files in other folders)
